# smart-manufacturing-platform

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  MEMORY.md  README.md  START.md  docker-compose.yml  pyproject.toml  start-dev.bat  start-dev.ps1  停止项目.bat  启动项目.bat  基于Agentic RAG与多智能体协作智能制造服务平台.md  重新清除缓存启动步骤.md
.claude/: settings.local.json
.githooks/: pre-commit
app/: main.py
app/agents/: base.py  maintenance.py  predictive_maintenance_agent.py  process_optimization.py  process_parameter_optimization_agent.py  production_scheduling_agent.py  quality.py  quality_inspection_agent.py  registry.py  scheduler.py  supply_chain.py  supply_chain_management_agent.py
app/api/: router.py
docs/: agent_flowcharts.md  knowledge_graph.md  mcp_integration.md  mvp_acceptance.md  video_script.md  windows_one_click_scripts.md
frontend/: .dockerignore  DEMO_SCRIPT.md  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
hooks/: check_claude.py
scripts/: start-dev.ps1  stop-dev.ps1
tests/: test_business_answer_service.py  test_business_closure.py  test_demo_mvp.py  test_guardrails.py  test_integration.py  test_knowledge_graph_service.py  test_knowledge_rag.py  test_mcp_gateway.py  test_neo4j_health_service.py  test_orchestrator.py  test_predictive_maintenance_agent.py  test_process_parameter_optimization_agent.py  test_production_scheduling_agent.py  test_quality_inspection_agent.py  test_supply_chain_management_agent.py  test_token_usage.py
(+56 files in other folders)
