[project]
name = "smart-manufacturing-platform"
version = "0.1.0"
description = "Enterprise-grade intelligent manufacturing platform based on Agentic RAG and multi-agent orchestration."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "sqlalchemy>=2.0.31,<3.0.0",
    "pymysql>=1.1.1,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "orjson>=3.10.6,<4.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-chroma>=1.0.0,<2.0.0",
    "langchain-text-splitters>=1.1.2,<2.0.0",
    "chromadb>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
    "ruff>=0.5.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
